src/styles/blocks/_event-list.scss
.event-list {
  h2 {
    margin-top: s(4);
  }
  .events {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: auto;
    grid-gap: s(2);
    padding-top: s(4);
    padding-bottom: s(4);
    @media (max-width: bp('lg')) {
      display: block;
    }
  }
  .ant-card-extra button {
    margin-left: s(2);
  }
}

